--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,2 @@
 MONGO_URI=mongodb+srv://qajgvalencia:BUxIhYb4nDlfH4DV@cluster0.h07iggq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-PORT=5000
-
+MONGO_DB_NAME=test
