--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,8 @@
-# Core dependencies
-PyQt5==5.15.10
-opencv-python==4.9.0.80
-numpy<2.0
-pillow==10.3.0
+# Raspberry Pi 5 requirements – Python 3.13 compatible
+# GUI stack comes from apt (pyqt5, opencv, pillow)
 
-# ONNX Runtime optimized for ARM CPU
-onnxruntime==1.17.1
-
-# Database (MongoDB)
-pymongo==4.8.0
-
-# Utility
-python-dotenv==1.0.1
-requests==2.31.0
+numpy==2.1.3
+onnxruntime==1.23.1
+ultralytics==8.3.27
+pymongo==4.10.1
+bcrypt==4.2.1
